tests/lexer/valid/test_whitespace.src

int x = 42;


float y = 3.14;


bool z = true;
