tests/lexer/invalid/test_unterminated_string.src
"unterminated string
int x = 42;"